--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
             </button>
         </form>
     </div>
-    <h5 class="existing-user-link">Tem uma conta? <a href="https://{{ team_id }}.slack.com">Entre aqui.</a></h5>
+    <h5 class="existing-user-link">Já participa do grupo? <a href="https://{{ team_id }}.slack.com">Entre aqui.</a></h5>
+    <h5 class="existing-user-link">Não possui conta no Slack? <a target="_blank" href="https://slack.com">Criar uma conta.</a></h5>
     <div class="form-container card-panel hidden" id="response-div">
         <p id="response-text">.</p>
     </div>
